@@ -14,6 +14,6 @@
     "logs"      : false,
     "socket"    : true,
     "port"      : 80,
-    "ip"        : "127.0.0.1",
+    "ip"        : null,
     "rest"      : true
 }
