@@ -99,8 +99,7 @@ var CloudCommander, Util, DOM, CloudFunc, CodeMirror;
             console.timeEnd('codemirror load');
             CodeMirrorLoaded = true;
             Util.exec(pCallBack);
-        });
-    
+        });    
     }
     
     /**
