@@ -106,15 +106,16 @@ var CloudCommander, Util, DOM, CloudFunc, $;
     function load(pCallBack){
         console.time('menu load');
         
-        var lDir = Menu.dir;
+        var lDir    = Menu.dir,
+            lFiles  = [
+                lDir + 'contextMenu.js',
+                lDir + 'contextMenu.css'
+            ];
         
-        DOM.anyLoadInParallel([
-            lDir + 'contextMenu.js',
-            lDir + 'contextMenu.css'],
-            function(){
-                console.timeEnd('menu load');
-                Util.exec(pCallBack);
-            });
+        DOM.anyLoadInParallel(lFiles, function(){
+            console.timeEnd('menu load');
+            Util.exec(pCallBack);
+        });
     }
     
     function set(){
@@ -205,7 +206,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
             load
         ]));
         
-        var key_event = (function(pEvent){
+        var key_event = function(pEvent){
             /* если клавиши можно обрабатывать */
             if( KeyBinding.get() ){
                 /* if shift + F10 pressed */
@@ -219,7 +220,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
             }
             else if (pEvent.keyCode === cloudcmd.KEY.ESC)
                 KeyBinding.set();
-        });
+        };
            
         /* добавляем обработчик клавишь */
         DOM.addKeyListener( key_event );
