@@ -28,17 +28,18 @@ var CloudCommander, Util, DOM, $, Github, cb;
     function load(pCallBack){
         console.time('github load');
         
-        var lDir = './lib/client/storage/github/';
-          DOM.anyLoadInParallel([
-              lDir + 'github.js',
-              lDir + 'lib/base64.js',
-              lDir + 'lib/underscore.js'],
-              
-              function(){
-                  console.timeEnd('github load');
-                  DOM.Images.hideLoad();
-                  
-                  Util.exec(pCallBack);
+        var lDir    = './lib/client/storage/github/',
+            lFiles  =  [
+                lDir + 'github.js',
+                lDir + 'lib/base64.js',
+                lDir + 'lib/underscore.js'
+            ];
+        
+        DOM.anyLoadInParallel(lFiles, function(){
+            console.timeEnd('github load');
+            DOM.Images.hideLoad();
+          
+            Util.exec(pCallBack);
           });
     }
     
