@@ -22,34 +22,34 @@ var CloudCommander, Util, DOM, $;
     function load(pCallBack){
         console.time('terminal load');
         
-        var lDir = 'lib/client/terminal/jquery-terminal/jquery.';
+        var lDir    = 'lib/client/terminal/jquery-terminal/jquery.',
+            lFiles  = [
+                lDir + 'terminal.js',
+                lDir + 'mousewheel.js',
+                lDir + 'terminal.css'
+            ];
         
-        DOM.anyLoadInParallel([
-            lDir + 'terminal.js',
-            lDir + 'mousewheel.js',
-            lDir + 'terminal.css'],
+        DOM.anyLoadInParallel(lFiles, function(){
+            console.timeEnd('terminal load');
+            init();
             
-            function(){
-                console.timeEnd('terminal load');
-                init();
-                
-                $(function($, undefined) {
-                    Term = JqueryTerminal.Term = $('#terminal').terminal(function(command, term){                        
-                        term.echo('');
-                        cloudcmd.Socket.send(command);
-                    }, {
-                        greetings   : '[[;#729FCF;]Cloud Commander Terminal]',
-                        prompt      : '[[;#729FCF;]cloudcmd> ]',
-                        color       : '#729FCF;'
-                    });
+            $(function($, undefined) {
+                Term = JqueryTerminal.Term = $('#terminal').terminal(function(command, term){                        
+                    term.echo('');
+                    cloudcmd.Socket.send(command);
+                }, {
+                    greetings   : '[[;#729FCF;]Cloud Commander Terminal]',
+                    prompt      : '[[;#729FCF;]cloudcmd> ]',
+                    color       : '#729FCF;'
                 });
-                /* removing resize function, no need for us */                    
-                Term.resize = function(){};
-                
-                $(window).unbind('resize');
-                
-                Util.exec(pCallBack.callback || pCallBack);
             });
+            /* removing resize function, no need for us */                    
+            Term.resize = function(){};
+            
+            $(window).unbind('resize');
+            
+            Util.exec(pCallBack.callback || pCallBack);
+        });
     }
     
     /**
